--- a/source/html/news.html
+++ b/source/html/news.html
@@ -48,6 +48,20 @@
 					
 				</ul>
 			</nav>
+						<div class="header-help">
+				<a href="">
+					<div class="button-help">
+						<p>Help!</p>
+					</div>
+				</a>
+			</div>
+			<div class="header-fb">
+				<a href="https://www.facebook.com/groups/radiohust/" target="_blank">
+					<div>
+						
+					</div>
+				</a>
+			</div>
 	</header>
 	<section class="grid-col-10-12">
 		<div class="breadcrumbs">
@@ -84,7 +98,7 @@
 					</div>
 				</div>
 			</a>
-			<a href="../news/news-1.html">	
+			<a href="../news/news-3.html">	
 				<div class="ls-2-2-cover">	
 					<div class="ls-2">
 						<div>
