--- a/source/html/people.html
+++ b/source/html/people.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="../css/style.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<header class="grid-col-10-12 grid-rows-2">
@@ -48,6 +48,13 @@
 					
 				</ul>
 			</nav>
+						<div class="header-help">
+				<a href="">
+					<div class="button-help">
+						<p>Help!</p>
+					</div>
+				</a>
+			</div>
 			<div class="header-fb">
 				<a href="https://www.facebook.com/groups/radiohust/" target="_blank">
 					<div>
@@ -69,26 +76,26 @@
 
 	<section class="grid-col-10-12">
 		<div class="people-title">
-			<h2>Звільнившись з в’язниці, хустянин знову скоїв серію злочинів і повернувся за грати</h2>
+			<a href=""><h2>Музики з Хуста виграли Гран-прі "Пісенного драйву-2019" (ФОТО)</h2></a>
 		</div>
 		<div class="people-image">
-			<img src="../img/people-1.jpg" alt="">
-		</div>
-		
-		<div class="poster-text">
-			<p>Хустським районним судом підтримано позицію Хустської місцевої прокуратури та визнано винним, раніше неодноразово судимого місцевого мешканця у вчиненні повторної крадіжки (ч.2 ст.185 КК України) та призначено покарання у вигляді 2 років позбавлення волі.</p>
+			<a href=""><img src="../img/people-3.jpg" alt=""></a>
 		</div>
 		<div class="people-title">
-			<h2>Хустянка у стані алкогольного сп’яніння на авто «Skoda Fаbіa» попалася поліцейським (ФОТО)</h2>
+			<a href=""><h2>Звільнившись з в’язниці, хустянин знову скоїв серію злочинів і повернувся за грати</h2></a>
 		</div>
 		<div class="people-image">
-			<img src="../img/people-2.jpg" alt="">
+			<a href=""><img src="../img/people-1.jpg" alt=""></a>
 		</div>
 		
-		<div class="poster-text">
-			<p>У Хусті працівники групи реагування патрульної поліції зупинили вночі автомобіль марки «Skoda Fаbіa», який поїхав під знак заборони руху. За кермом автомобіля перебувала молода місцева жителька в стані алкогольного сп’яніння. Водійського посвідчення жінка не надала, від проходження медосвідування відмовилася. На правопорушницю склали відповідні адмінпротоколи та відсторонили від керування.</p>
-		</div>		
 
+		<div class="people-title">
+			<a href=""><h2>Хустянка у стані алкогольного сп’яніння на авто «Skoda Fаbіa» попалася поліцейським (ФОТО)</h2></a>
+		</div>
+		<div class="people-image">
+			<a href=""><img src="../img/people-2.jpg" alt=""></a>
+		</div>
+		
 	</section>
 		
 	
