--- a/source/html/streets.html
+++ b/source/html/streets.html
@@ -44,6 +44,13 @@
 					<li><a>Наші вулиці</a></li>
 				</ul>
 			</nav>
+			<div class="header-help">
+				<a href="">
+					<div class="button-help">
+						<p>Допомога</p>
+					</div>
+				</a>
+			</div>
 			<div class="header-fb">
 				<a href="https://www.facebook.com/groups/radiohust/" target="_blank">
 					<div>
