--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,13 @@
 					
 				</ul>
 			</nav>
+			<div class="header-help">
+				<a href="">
+					<div class="button-help">
+						<p>Help!</p>
+					</div>
+				</a>
+			</div>
 			<div class="header-fb">
 				<a href="https://www.facebook.com/groups/radiohust/" target="_blank">
 					<div>
@@ -45,11 +52,7 @@
 			</div>
 	</header>
 	<section class="grid-col-10-12">
-		<a href="">
-			<div class="button-help">
-				<p>Допомога</p>
-			</div>
-		</a>			
+					
 		</div>
 		<div class="event-container">
 			<div class="event">
