--- a/www/miskrada.html
+++ b/www/miskrada.html
@@ -40,7 +40,7 @@
 		
 			<nav>
 				<ul>
-					<li><a>Хуст</a></li>
+					<li><a href="news.html">Хуст</a></li>
 					<li><a href="poster.html">Афіша</a></li>
 					<li><a href="people.html">Люди нашого міста</a></li>
 					<li><a>Що робиться</a></li>
@@ -48,6 +48,13 @@
 					
 				</ul>
 			</nav>
+			<div class="header-help">
+				<a href="">
+					<div class="button-help">
+						<p>Help!</p>
+					</div>
+				</a>
+			</div>			
 			<div class="header-fb">
 				<a href="https://www.facebook.com/groups/radiohust/" target="_blank">
 					<div>
