--- a/source/html/index.html
+++ b/source/html/index.html
@@ -10,7 +10,6 @@
 		
 			<div class="emblem-khust">
 				<a><img src="../img/emblem-khust.png" alt=""></a>
-				<a><p>Громада Хуста</p></a>
 			</div>
 			<div class="header-right">
 				<div class="weather-informer">
@@ -19,19 +18,21 @@
 					</div>	
 				</div>
 				<div class="radio">
-					<img src="../img/radio.jpg" alt="">
-					<div id="play-stop">
-						<img  src="../img/play.png" alt="">
+				<!-- 	<img src="../img/radio.jpg" alt=""> -->
+					<div class="play-stop-cover">
+						<div id="play-stop">
+							<img  src="../img/play.png" alt="">
+						</div>
 					</div>
 					
 				</div>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="news.html">Хуст</a></li>
+					<li><a href="news.html">Хуст новини</a></li>
 					<li><a href="poster.html">Афіша</a></li>
 					<li><a href="people.html">Люди нашого міста</a></li>
-					<li><a href="miskrada.html">Що робиться</a></li>
+					<li><a href="miskrada.html">Що в місті робиться</a></li>
 					<li><a href="streets.html">Наші вулиці</a></li>
 					
 				</ul>
