--- a/www/news.html
+++ b/www/news.html
@@ -12,12 +12,7 @@
 				<a href="../index.html">
 					<img src="../img/emblem-khust.png" alt="">
 				</a>
-				<a href="../index.html">
-					<p>Громада Хуста</p>
-				</a>
-					
 			</div>
-			
 			<div class="header-right">
 				<div class="weather-informer">
 					<div class = "wi-inner">
@@ -25,19 +20,19 @@
 					</div>	
 				</div>
 				<div class="radio">
-					<img src="../img/radio.jpg" alt="">
-					<div id="play-stop">
-						<img  src="../img/play.png" alt="">
+					<div class="play-stop-cover">
+						<div id="play-stop">
+							<img  src="../img/play.png" alt="">
+						</div>
 					</div>
-					
 				</div>
 			</div>
 			<nav>
 				<ul>
-					<li><a>Хуст</a></li>
+					<li><a>Хуст новини</a></li>
 					<li><a href="poster.html">Афіша</a></li>
 					<li><a href="people.html">Люди нашого міста</a></li>
-					<li><a href="miskrada.html">Що робиться</a></li>
+					<li><a href="miskrada.html">Що в місті робиться</a></li>
 					<li><a href="streets.html">Наші вулиці</a></li>
 				</ul>
 			</nav>
