--- a/www/poster.html
+++ b/www/poster.html
@@ -11,9 +11,6 @@
 				<a href="../index.html">
 					<img src="../img/emblem-khust.png" alt="">
 				</a>
-				<a href="../index.html">
-					<p>Громада Хуста</p>
-				</a>
 			</div>
 			<div class="header-right">
 				<div class="weather-informer">
@@ -22,18 +19,19 @@
 					</div>	
 				</div>
 				<div class="radio">
-					<img src="../img/radio.jpg" alt="">
-					<div id="play-stop">
-						<img  src="../img/play.png" alt="">
+					<div class="play-stop-cover">
+						<div id="play-stop">
+							<img  src="../img/play.png" alt="">
+						</div>
 					</div>
 				</div>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="news.html">Хуст</a></li>
+					<li><a href="news.html">Хуст новини</a></li>
 					<li><a>Афіша</a></li>
 					<li><a href="people.html">Люди нашого міста</a></li>
-					<li><a href="miskrada.html">Що робиться</a></li>
+					<li><a href="miskrada.html">Що в місті робиться</a></li>
 					<li><a href="streets.html">Наші вулиці</a></li>
 					
 				</ul>
