--- a/source/html/index.html
+++ b/source/html/index.html
@@ -54,14 +54,16 @@
 		<div class="event-container">
 			<div class="event">
 				<p class = "date">28.06.2019 р.</p>
-				<div class="event-image-wrap">
-					<div class="event-image">	
-							<img src="../img/event-1.jpg" alt="">
+				<a href="../news/news-4.html">
+					<div class="event-image-wrap">
+						<div class="event-image">	
+								<img src="../img/l-1.jpg" alt="">
+						</div>
+						<div class="event-shadow">
+							<h3>"Необхідно ремонтувати школи, дитячі садочки, амбулаторії", – Валерій Лунченко поспілкувався із закарпатцями</h3>
+						</div>
 					</div>
-					<div class="event-shadow">
-						<h3>У Хусті пройшли урочисті заходи до Дня Конституції (ВІДЕО)</h3>
-					</div>
-				</div>
+				</a>	
 			</div>
 			<div class="event">
 				<p class = "date">28.06.2019 р.</p>
