--- a/www/news.html
+++ b/www/news.html
@@ -63,11 +63,11 @@
 	</section>
 	<section class="last-news grid-col-10-12 gap-25">
 		<div class="big-last-news">
-			<a href="../news/news-1.html">
+			<a href="../news/news-4.html">
 				<div class="ls1-cover">
 					<div class="ls-1">
 						<div>
-							<h1>Масштабний ямковий ремонт на Хустщині (Відео)</h1>
+							<h1>"Необхідно ремонтувати школи, дитячі садочки, амбулаторії", – Валерій Лунченко поспілкувався із закарпатцями</h1>
 						</div>
 					</div>
 				</div>
@@ -99,8 +99,8 @@
 	<section class="news grid-col-10-12 grid-rows-5">
 		<div class="news-container">
 			<div class="news-text">
-				<p class = "news-date">10.12.2019</p>
-				<a href=""><p>У Хусті прийняли бюджет на 2019 рік. Загалом на 9-му засіданні 8-ї сесії Хустської міської ради депутати розглянули більше 60-ти питань, одне з яких якраз і стосувалося бюджету міста на рік наступний.</p></a>
+				<p class = "news-date">10.06.2019</p>
+				<a href="../news/news-1.html"><p>Масштабний ямковий ремонт розпочали на дорогах Хустщини. Підрядники вже полатали ями у напрямку від Сокирниці через Крайниково, дійшли аж до Золотарева.</p></a>
 			</div>
 		</div><div class="news-container">
 			<div class="news-text">
@@ -138,7 +138,7 @@
 				<li>1</li>
 				<li>2</li>
 				<li>3</li>
-				<li>4</li>
+				<li>4</li>	
 				<li>5</li>
 				<li>6</li>
 			</ul>
