--- a/source/html/streets.html
+++ b/source/html/streets.html
@@ -40,7 +40,7 @@
 			<div class="header-help">
 				<a href="">
 					<div class="button-help">
-						<p>Допомога</p>
+						<p>Help!</p>
 					</div>
 				</a>
 			</div>
@@ -57,20 +57,82 @@
 			<ul>
 				<li><a href="index.html">Головна</a></li>
 				&bull;&bull;&bull;
-				<li><a>Що робить мііськрада</a></li>
+				<li><a>Наші вулиці</a></li>
 			</ul>
 		</div>
 		
 	</section>
 
-	<section class="grid-col-10-12 street-working">
-		<div class="message">
-			<h1>Сторінка створюється прямо зараз</h1>
+	<section>
+		<div class="image-cover grid-col-10-12">
+			<div class="streets-title">
+				<h2>Вулиця Дружби</h2>
+			</div>
+			<div class="streets-images">
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-1.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-2.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-3.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-4.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-5.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-6.jpg" alt="">
+				</div>
+			</div>
+			<div class="street-text">
+				<p>Прогулянка вулицею Дружби в хороший осінній день. По недавно укладеній бруківці.</p>
+				<p>Просто погляньте. Бордюрчики, відбортовки, біля бордюрів - два ряди каміння інакшого кольору. Переходи викладені різнокольоровим камінням. Центральна лінія має відмінний колір та іншу текстуру. Люки приховані на рівні дороги. Дощівки на місці.</p>
+				<p>Хустяни не були би хустянами, якби не зробили красивий тротуарчик ще красивішим.</p>
+				<p>Шумне перехрестя на Духновича.</p>
+				<p>А за 20 метрів від перехрестя - тишина та спокій.</p>
+			</div>
 		</div>
+		<div class="image-cover grid-col-10-12">
+			<div class="streets-title">
+				<h2>Вулиця дружби</h2>
+			</div>
+			<div class="streets-images">
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-1.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-2.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-3.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-4.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-5.jpg" alt="">
+				</div>
+				<div class="street-img">
+					<img src="../img/streets/freundschaft-small-6.jpg" alt="">
+				</div>
+			</div>
+			<div class="street-text">
+				<p>Прогулянка вулицею Дружби в хороший осінній день. По недавно укладеній бруківці.</p>
+				<p>Просто погляньте. Бордюрчики, відбортовки, біля бордюрів - два ряди каміння інакшого кольору. Переходи викладені різнокольоровим камінням. Центральна лінія має відмінний колір та іншу текстуру. Люки приховані на рівні дороги. Дощівки на місці.</p>
+				<p>Хустяни не були би хустянами, якби не зробили красивий тротуарчик ще красивішим.</p>
+				<p>Шумне перехрестя на Духновича.</p>
+				<p>А за 20 метрів від перехрестя - тишина та спокій.</p>
+			</div>
+		</div>
+
 	</section>
 		
 	
-	<footer class="grid-col-10-12">
+	<footer class="grid-col-10-12 footer-streets">
 		<div class="emblem-hust">
 			<a href="http://khust-miskrada.gov.ua" target="_blank">
 				<div>
