--- a/www/poster.html
+++ b/www/poster.html
@@ -51,8 +51,8 @@
 				</a>
 			</div>			
 	</header>
-	<section class="grid-col-10-12">
-		<div class="breadcrumbs">
+	<section class="grid-col-10-12 posters">
+		<div class="breadcrumbs-poster">
 			<ul>
 				<li><a href="index.html">Головна</a></li>
 				&bull;&bull;&bull;
@@ -61,7 +61,7 @@
 		</div>
 	</section>
 
-	<section class="grid-col-10-12">
+	<section class="grid-col-10-12 posters">
 		<div class="posters-wrap">
 			<div class="poster-container">
 				<div>
@@ -129,7 +129,7 @@
 		</div>
 	</section>		
 	
-	<footer class="grid-col-10-12">
+	<footer class="grid-col-10-12 footer-streets">
 		<div class="emblem-hust">
 			<a href="http://khust-miskrada.gov.ua" target="_blank">
 				<div>
