--- a/www/help.html
+++ b/www/help.html
@@ -34,7 +34,7 @@
 					<li><a href="poster.html">Афіша</a></li>
 					<li><a href="people.html">Люди нашого міста</a></li>
 					<li><a href="miskrada.html">Що в місті робиться</a></li>
-					<li><a>Наші вулиці</a></li>
+					<li><a href="streets.html">Наші вулиці</a></li>
 				</ul>
 			</nav>
 
@@ -51,7 +51,7 @@
 			<ul>
 				<li><a href="index.html">Головна</a></li>
 				&bull;&bull;&bull;
-				<li><a>Наші вулиці</a></li>
+				<li><a>Help!</a></li>
 			</ul>
 		</div>
 		
@@ -59,19 +59,58 @@
 
 	<section class="grid-col-10-12">
 		<div class="help-children">
-			<h2>Допомога дітям</h2>
+			<div class="help-title">
+				<h2>Допомога дітям</h2>
+
+			</div>
+			
+			<div class="help-child">
+				<table>
+					<tr>
+						<td>Ім'я дитини:</td>
+						<td>John Smith</td>
+					</tr>
+					<tr>
+						<td>Мета допомоги:</td>
+						<td>Лікування за кордоном</td>
+					</tr>
+					<tr>
+						<td>Телефон батьків:</td>
+						<td>+3 8 888 322 22 33</td>
+					</tr>
+					<tr>
+						<td>Реквізити:</td>
+						<td>Карта приват:</br>8888 8888 8888 8888</br>
+							Рахунок в Райфайзен банк Аваль:</br>
+							8888 8888 8888 8888
+						</td>
+					</tr>					
+				</table>
+			</div>
 		</div>
-		<div class="help-east">		
-			<h2>Допомога воїнам на сході</h2>
+		<div class="help-east">
+			<div class="help-title">		
+				<h2>Допомога воїнам на сході</h2>
+			</div>
+			<div class="help-child">
+				<table>
+					<tr>
+						<td>Ім'я дитини:</td>
+						<td>John Smith</td>
+					</tr>
+				</table>
+			</div>				
 		</div>
 		<div class="help-trabl">
-			<h2>Допомога тим, хто потрапив в халепу</h2>
+			<div class="help-title">
+				<h2>Допомога тим, хто потрапив в халепу</h2>
+			</div>	
 		</div>
 
 	</section>
 		
 	
-	<footer class="grid-col-10-12 footer-streets">
+	<footer class="grid-col-10-12 footer-help">
 		<div class="emblem-hust">
 			<a href="http://khust-miskrada.gov.ua" target="_blank">
 				<div>
