--- a/www/news.html
+++ b/www/news.html
@@ -36,7 +36,7 @@
 				</ul>
 			</nav>
 						<div class="header-help">
-				<a href="">
+				<a href="../help.html">
 					<div class="button-help">
 						<p>Help!</p>
 					</div>
