--- a/www/people.html
+++ b/www/people.html
@@ -37,7 +37,7 @@
 				</ul>
 			</nav>
 			<div class="header-help">
-				<a href="">
+				<a href="../help.html">
 					<div class="button-help">
 						<p>Help!</p>
 					</div>
