--- a/www/streets.html
+++ b/www/streets.html
@@ -38,7 +38,7 @@
 				</ul>
 			</nav>
 			<div class="header-help">
-				<a href="">
+				<a href="../help.html">
 					<div class="button-help">
 						<p>Help!</p>
 					</div>
