--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -11,7 +11,7 @@
 				<a><img src="../img/emblem-khust.png" alt=""></a>
 			</div>
 			<div class="header-right">
-				<div class="weather-informer">
+				<div class="weather-informer hide">
 					<div class = "wi-inner">
 						<!-- weather widget start --><div id="m-booked-small-t2-71787"> <div class="booked-weather-120x36 w120x36-18" style="color:#ffffff; border-radius:4px; -moz-border-radius:4px; border:none"> <a target="_blank" style="color:#ffffff;" href="https://hotelmix.com.ua/weather/khust-127228" class="booked-weather-120x36-city">Хуст</a> <a target="_blank" class="booked-weather-120x36-bottom" href="https://www.booked.net/"><img src="//s.bookcdn.com/images/letter/s5.gif" alt="Booked" /></a> <div class="booked-weather-120x36-degree"><span class="plus">+</span>14...<span class="plus">+</span>21&deg; C</div> </div> </div><script type="text/javascript"> var css_file=document.createElement("link"); css_file.setAttribute("rel","stylesheet"); css_file.setAttribute("type","text/css"); css_file.setAttribute("href",'https://s.bookcdn.com/css/w/bw-120-36.css?v=0.0.1'); document.getElementsByTagName("head")[0].appendChild(css_file); function setWidgetData(data) { if(typeof(data) != 'undefined' && data.results.length > 0) { for(var i = 0; i < data.results.length; ++i) { var objMainBlock = document.getElementById('m-booked-small-t2-71787'); if(objMainBlock !== null) { var copyBlock = document.getElementById('m-bookew-weather-copy-'+data.results[i].widget_type); objMainBlock.innerHTML = data.results[i].html_code; if(copyBlock !== null) objMainBlock.appendChild(copyBlock); } } } else { alert('data=undefined||data.results is empty'); } } </script> <script type="text/javascript" charset="UTF-8" src="https://widgets.booked.net/weather/info?action=get_weather_info&ver=6&cityID=127228&type=12&scode=2&ltid=3458&domid=966&anc_id=53766&cmetric=1&wlangID=29&color=2071c9&wwidth=118&header_color=2071c9&text_color=ffffff&link_color=ffffff&border_form=3&footer_color=2071c9&footer_text_color=ffffff&transparent=1"></script><!-- weather widget end -->
 					</div>	
