--- a/www/poster.html
+++ b/www/poster.html
@@ -65,7 +65,7 @@
 		<div class="posters-wrap">
 			<div class="poster-container">
 				<div>
-					<a href="">
+					<a href="../posters/poster-1.html">
 						<img src="../img/poster-1-1.jpg" alt="">
 					</a>
 				</div>
