--- a/source/html/people.html
+++ b/source/html/people.html
@@ -62,32 +62,38 @@
 		
 	</section>
 
-	<section class="grid-col-10-12">
-		<div class="people-title">
-			<a href=""><h2>Музики з Хуста виграли Гран-прі "Пісенного драйву-2019" (ФОТО)</h2></a>
-		</div>
-		<div class="people-image">
-			<a href=""><img src="../img/people-3.jpg" alt=""></a>
-		</div>
-		<div class="people-title">
-			<a href=""><h2>Звільнившись з в’язниці, хустянин знову скоїв серію злочинів і повернувся за грати</h2></a>
-		</div>
-		<div class="people-image">
-			<a href=""><img src="../img/people-1.jpg" alt=""></a>
-		</div>
-		
+	<section class="grid-col-10-12 people">
 
-		<div class="people-title">
-			<a href=""><h2>Хустянка у стані алкогольного сп’яніння на авто «Skoda Fаbіa» попалася поліцейським (ФОТО)</h2></a>
-		</div>
-		<div class="people-image">
-			<a href=""><img src="../img/people-2.jpg" alt=""></a>
-		</div>
-		
-	</section>
-		
-	
-	<footer class="grid-col-10-12">
+			<div class="posters-wrap">
+				<div class="poster-image">
+					<a href="../people/people-1.html"><img src="../img/tetyana-1.jpg" alt=""></a>
+				</div>
+				<div class="people-description">
+					<div>
+						<h2>Тетяна Баньоі</h2>
+					</div>
+					<div>
+						<p>Тетяна - вчитель молодших класів, школа №6.</p>
+					</div>
+					
+				</div>
+			</div>	
+			<div class="posters-wrap">
+				<div class="poster-image">
+					<img src="../img/tetyana-1.jpg" alt="">
+				</div>
+				<div class="people-description">
+					<div>
+						<h2>Тетяна Баньоі</h2>
+					</div>
+					<div>
+						<p>Тетяна - вчитель молодших класів, школа №6</p>
+					</div>
+					
+				</div>
+			</div>	
+	</section>	
+	<footer class="grid-col-10-12 footer-streets">
 		<div class="emblem-hust">
 			<a href="http://khust-miskrada.gov.ua" target="_blank">
 				<div>
@@ -120,8 +126,6 @@
 			</div>
 		</div>
 	</footer>
-
-			
 <script src = "../js/script.js"></script>
 	
 	
