--- a/source/html/posters/poster-1.html
+++ b/source/html/posters/poster-1.html
@@ -69,13 +69,9 @@
 				<img src="../img/acdc-1.jpg" alt="">
 			</div>
 			<div class="poster-text">
-				<p>asd;flas;dlf;asdlfj
-				asd;lkasjkd;lasjkd;lasd
-				asd;las;dlkasdka;lsdk</p>
+				<div></div>
 			</div>
 		</div>
-		
-		
 	</section>		
 	
 	<footer class="grid-col-10-12 footer-streets">
