--- a/source/html/people/people-1.html
+++ b/source/html/people/people-1.html
@@ -53,13 +53,17 @@
 	</header>
 	<section class="grid-col-10-12">
 		<div class="people-photo">
-			<img src="../img/tetyana-1-300.jpg" alt="">
-			<img src="../img/tetyana-2-300.jpg" alt="">
-			<img src="../img/tetyana-3-300.jpg" alt="">
-			<img src="../img/tetyana-4-300.jpg" alt="">
+			<img src="../img/tetyana-1-200.jpg" alt="">
+			<img src="../img/tetyana-2-200.jpg" alt="">
+			<img src="../img/tetyana-3-200.jpg" alt="">
+			<img src="../img/tetyana-4-200.jpg" alt="">
 		</div>
 		<div class="people-text">
-			
+			<p class="question">Чому педагогіка?</p>
+			<p class="answer">З дитинства мріяла бути вчителькою спілкуватися з дітками навчати. У них зовсім не таке бачення світу як у дорослих з ними цікаво.</p>
+			<p class="question">Загальний рівень освіти та культури в країні останнім часом знизився. Як на загальному фоні виглядають хустські діти?</p>
+			<p class="answer">У нас багато талановитих дітей, ми їздимо на олімпіади і там виграємо. На рівні України ми досить непогано виглядаємо. Особливо школа-гімназія. Багато наших дітей після початкових класів переходять в гімназію і там успішні. Вчителі гімназії частенько дякують за хороший рівень підготовки.</p>
+			<p class="answer">З іншого боку, у нас пропав стимул вчитися. Начебто вчимося, ходимо на додаткові заняття, сидимо вечорами і у вільний час, а в школі пропускаємо матеріал мимо вух.</p>
 		</div>
 	</section>
 
