--- a/www/people/people-1.html
+++ b/www/people/people-1.html
@@ -59,7 +59,7 @@
 			<img src="../img/tetyana-4-200.jpg" alt="">
 		</div>
 		<div class="people-text">
-			<p class="question">Чому педагогіка?</p>
+			<h3>Чому педагогіка?</h3>
 			<p class="answer">З дитинства мріяла бути вчителькою спілкуватися з дітками навчати. У них зовсім не таке бачення світу як у дорослих з ними цікаво.</p>
 			<p class="question">Загальний рівень освіти та культури в країні останнім часом знизився. Як на загальному фоні виглядають хустські діти?</p>
 			<p class="answer">У нас багато талановитих дітей, ми їздимо на олімпіади і там виграємо. На рівні України ми досить непогано виглядаємо. Особливо школа-гімназія. Багато наших дітей після початкових класів переходять в гімназію і там успішні. Вчителі гімназії частенько дякують за хороший рівень підготовки.</p>
